--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,18 @@
     />
     <!-- Primary Meta Tags -->
     <title>
-      Workorona | Asesoría académica y solución de tus trabajos y talleres.
+      Tapabocas YA!
     </title>
-    <meta
+    <!-- <meta
       name="title"
       content="Workorona | Asesoría académica y solución de tus trabajos y talleres."
     />
     <meta
       name="description"
       content="¡Entrega tus trabajos a tiempo! En Workorona somos expertos en darte la asesoría que necesitas para resolver tus tareas de colegio o talleres de universidad."
-    />
+    /> -->
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
+    <!-- <meta property="og:type" content="website" />
     <meta property="og:url" content="https://workorona.com" />
     <meta
       property="og:title"
@@ -37,31 +37,7 @@
     <meta
       property="og:image"
       content="https://res.cloudinary.com/sebashr20/image/upload/v1585009123/seed/jmxktjkplupaasos5rmz.png"
-    />
-    <!-- Mercadopago -->
-    <script type="text/javascript">
-      (function() {
-        function $MPC_load() {
-          window.$MPC_loaded !== true &&
-            (function() {
-              var s = document.createElement("script");
-              s.type = "text/javascript";
-              s.async = true;
-              s.src =
-                document.location.protocol +
-                "//secure.mlstatic.com/mptools/render.js";
-              var x = document.getElementsByTagName("script")[0];
-              x.parentNode.insertBefore(s, x);
-              window.$MPC_loaded = true;
-            })();
-        }
-        window.$MPC_loaded !== true
-          ? window.attachEvent
-            ? window.attachEvent("onload", $MPC_load)
-            : window.addEventListener("load", $MPC_load, false)
-          : null;
-      })();
-    </script>
+    /> -->
   </head>
   <body class="sidebar-collapse">
     <noscript>You need to enable JavaScript to run this app.</noscript>
