New backgorund img. Carts with products. Contact button in nav and foorer

--- a/public/index.html
+++ b/public/index.html
@@ -13,31 +13,31 @@
     />
     <!-- Primary Meta Tags -->
     <title>
-      Tapabocas YA!
+      TapabocasYa | Proteje tu vida y la de tu familia en todo momento
     </title>
-    <!-- <meta
+    <meta
       name="title"
-      content="Workorona | Asesoría académica y solución de tus trabajos y talleres."
+      content="TapabocasYa | Proteje tu vida y la de tu familia en todo momento"
     />
     <meta
       name="description"
-      content="¡Entrega tus trabajos a tiempo! En Workorona somos expertos en darte la asesoría que necesitas para resolver tus tareas de colegio o talleres de universidad."
-    /> -->
+      content="Usamos insumos de alta calidad: materiales antifluidos no tejidos para darte la mejor protección y mantener a tu familia segura."
+    />
     <!-- Open Graph / Facebook -->
-    <!-- <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://workorona.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tapabocasya.com" />
     <meta
       property="og:title"
-      content="Workorona | Asesoría académica y solución de tus trabajos y talleres."
+      content="TapabocasYa | Proteje tu vida y la de tu familia en todo momento"
     />
     <meta
       property="og:description"
-      content="¡Entrega tus trabajos a tiempo! En Workorona somos expertos en darte la asesoría que necesitas para resolver tus tareas de colegio o talleres de universidad."
+      content="Usamos insumos de alta calidad: materiales antifluidos no tejidos para darte la mejor protección y mantener a tu familia segura."
     />
     <meta
       property="og:image"
       content="https://res.cloudinary.com/sebashr20/image/upload/v1585009123/seed/jmxktjkplupaasos5rmz.png"
-    /> -->
+    />
   </head>
   <body class="sidebar-collapse">
     <noscript>You need to enable JavaScript to run this app.</noscript>
