SKUs logic in cart. Add cart badge

--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
     />
     <!-- Primary Meta Tags -->
     <title>
-      TapabocasYa | Proteje tu vida y la de tu familia en todo momento
+      TapabocasYa | Proteje tu vida y la de tu familia en todo momento.
     </title>
     <meta
       name="title"
-      content="TapabocasYa | Proteje tu vida y la de tu familia en todo momento"
+      content="TapabocasYa | Proteje tu vida y la de tu familia en todo momento."
     />
     <meta
       name="description"
@@ -28,16 +28,13 @@
     <meta property="og:url" content="https://tapabocasya.com" />
     <meta
       property="og:title"
-      content="TapabocasYa | Proteje tu vida y la de tu familia en todo momento"
+      content="TapabocasYa | Proteje tu vida y la de tu familia en todo momento."
     />
     <meta
       property="og:description"
       content="Usamos insumos de alta calidad: materiales antifluidos no tejidos para darte la mejor protección y mantener a tu familia segura."
     />
-    <meta
-      property="og:image"
-      content="https://res.cloudinary.com/sebashr20/image/upload/v1585009123/seed/jmxktjkplupaasos5rmz.png"
-    />
+    <meta property="og:image" content="%PUBLIC_URL%/logo-wapp-fb.png" />
   </head>
   <body class="sidebar-collapse">
     <noscript>You need to enable JavaScript to run this app.</noscript>
