--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
 
     <!-- Primary Meta Tags -->
     <title>
-      TapabocasYa | Proteje tu vida y la de tu familia en todo momento.
+      TapabocasYa | Protege tu vida y la de tu familia en todo momento.
     </title>
     <meta
       name="title"
-      content="TapabocasYa | Proteje tu vida y la de tu familia en todo momento."
+      content="TapabocasYa | Protege tu vida y la de tu familia en todo momento."
     />
     <meta
       name="description"
@@ -29,7 +29,7 @@
     <meta property="og:url" content="https://tapabocasya.com" />
     <meta
       property="og:title"
-      content="TapabocasYa | Proteje tu vida y la de tu familia en todo momento."
+      content="TapabocasYa | Protege tu vida y la de tu familia en todo momento."
     />
     <meta
       property="og:description"
